<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="PD6Polarity" Id="{5272d1ac-fbd0-4690-8674-b31d6475e737}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE PD6Polarity :
(
	Positive := 64,
	Negative := 0
)USINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>