<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PD6_IN" Id="{622dcd54-dd65-4234-8444-a12289a86fae}">
    <Declaration><![CDATA[TYPE ST_PD6_IN :
STRUCT
	StatusWord 				: UINT; 
	OperationModeDisplay 	: SINT;
	ActualPosition 			: DINT;
	ActualVelocity 			: INT;
	ActiveCurrent			: REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>